# NEWAdressContactProject

./: README.md  setup.cfg
Adress_Project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
adress/: __init__.py  add_check.py  add_contact_gui.py  add_for_gui.py  add_only_one_second_adress.py  add_second.py  calculate_id.py  check_entry.py  count_screen.py  create_database.py  create_database_category.py  delete.py  delete_contact_gui.py  delete_for_gui.py  gui_query.py  gui_update_record.py  insert_category.py  insert_query.py  main_contact.py  main_gui.py  query.py  query_search_by.py  update_for_gui.py  update_item_query.py  update_query.py
database/: .gitignore  adress.db  adress_cat.db  adress_tables.sql
tests/: test_00_import.py  test_01_create.py  test_02_check_tables.py  test_03_add.py  test_03_insert.py  test_04_update.py  test_05_delete.py  test_05_delete_.py  test_06_query.py  test_07_get_id.py  test_08_search.py  test_09_get_category.py  test_10_checking.py  test_11_accept_adress.py  test_query_by.py
