[metadata]
name = Adress Project
description = adress project
version = 1.0.0
url = https://github.com
keywords = logging
        pytest
        file
        parser
        output
        input
        sqlite3
	restful
	rest

license_file =
        LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires =
	pydantic
    flake8
    isort
    pytest
    pillow


[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[tool:pytest]
testpaths = ./tests
log_level = info
